# skill-installer

./: .gitignore  Cargo.toml  README.md
src/: embed.rs  error.rs  install.rs  interactive.rs  lib.rs  parser.rs  providers.rs  types.rs
tests/: integration.rs
ts/: README.md  package-lock.json  package.json
ts/src/: index.ts
