[package]
name = "skillinstaller"
version = "0.1.0"
edition = "2021"
description = "Install one .skill payload across multiple AI coding providers with deterministic project/user targets."
license = "MIT"
repository = "https://github.com/j0nl1/skillinstaller"
homepage = "https://github.com/j0nl1/skillinstaller"
documentation = "https://docs.rs/skillinstaller"
readme = "README.md"
keywords = ["skills", "installer", "agents", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "skillinstaller"
path = "src/lib.rs"

[features]
default = []
interactive = ["dep:crossterm", "dep:ratatui", "dep:rust-embed"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", optional = true }
ratatui = { version = "0.28", optional = true }
rust-embed = { version = "8", optional = true }

[dev-dependencies]
tempfile = "3"
